<resources>
    <string name="app_name">MyNoteGB</string>
    <string name="def">Тост</string>
    <string name="data">Дата заметки</string>
    <string name="name">Название заметки</string>
    <string name="description">Описание</string>
    <string name="app_title">Блокнот</string>
    <string name="nameNew">Наименование</string>
    <string name="dataNew">Дата</string>
    <string name="descriptionNew">Подробнее</string>
    <string name="app_name_info">Информация</string>
    <string name="action_search">search</string>
    <string name="action_sort">sort</string>
    <string name="action_share">share</string>
    <string name="action_add">add photo</string>
    <string name="action_setting">Настройки</string>
    <string name="action_about">О приложении</string>
    <string name="what_about">Оцените наше приложение</string>
    <string name="setting">Настройки</string>
    <string name="toolbar_about">О приложении</string>
    <string name="toolbar_setting">Настройки</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="action_notes">Заметки</string>
    <string name="action_pop_copy">Копировать</string>
    <string name="action_pop_past">Вставить</string>
    <string name="Search">Поиск</string>
    <string name="dialog_fragment_view_hint">Hint</string>
    <string name="edit">Edit Note</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отменить</string>
    <string name="action_exit">Выйти</string>
    <string name="action_bottom_search">Поиск</string>
    <string name="action_bottom_new">Info</string>
    <string name="find">Найти</string>
    <string name="title">Заголовок</string>
    <string name="details">Описание</string>
    <string name="exit">Вы действительно хотите выйти из приложения?</string>
    <string name="action_edit">Редактировать</string>
    <string name="action_delete">Удалить</string>
</resources>